[package]
name = "scorpiofs"
version = "0.2.3"
edition = "2021"
# `cargo run` (no --bin) runs the main `scorpio` binary; `antares` is the alias.
default-run = "scorpio"
description = "FUSE-based virtual filesystem with Antares overlay for monorepo builds"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitmono-dev/scorpiofs"
documentation = "https://docs.rs/scorpiofs"
keywords = ["fuse", "filesystem", "overlay", "monorepo", "build-system"]
categories = ["filesystem", "development-tools::build-utils"]
readme = "README.md"


[lib]
name = "scorpiofs"
path = "src/lib.rs"

# The main binary is `scorpio` (the crate/lib is `scorpiofs`). `antares` is
# auto-discovered from src/bin/antares.rs and kept as a deprecated alias.
[[bin]]
name = "scorpio"
path = "src/main.rs"


[dependencies]
git-internal = "0.4.1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros"] }
rfuse3 = { version = "0.0.9", features = [
    "tokio-runtime",
    "unprivileged",
    "file-lock",
] }
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5"

toml = "0.9.8"
libc = "0.2.180"
log = "0.4.29"
radix_trie = "0.3.0"
tracing = "0.1.44"
serde_json = "1.0.149"
once_cell = "1.21.3"
env_logger = "0.11.8"
sled = "0.34.7"
bincode = "2.0.1"
async-recursion = "1.1.1"
bytes = "1.11.1"
futures = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }
libfuse-fs = "0.1.14"
whoami = "1.6.0"
thiserror = "2.0.18"
crossbeam = "0.8.4"
dashmap = "6.1.0"
ring = "0.17.14"
hex = "0.4.3"
url = "2.5"

async-trait = "0.1.89"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }


[features]
async-io = []

[dev-dependencies]
tempfile = "3.24.0"
serial_test = "3.3.1"
lazy_static = "1.5.0"
assert_cmd = "2.1.2"
scopeguard = "1.2.0"
testcontainers = { version = "0.26.3", features = [
    "http_wait",
    "reusable-containers",
] }
reqwest = { version = "0.13.1", features = ["blocking"] }
http = "1.4.0"
tower = "0.5.3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
